--- a/client/src/components/HomePage_Loggedin.module.css
+++ b/client/src/components/HomePage_Loggedin.module.css
@@ -95,7 +95,7 @@
     margin-top:2.5% ;
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: flex-end;
 }
 
 .popskills{
